# clinical-ai-tool-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: demo.ipynb  walkthrough.ipynb
src/clinical_ai_tool_agent/: __init__.py  agent.py  calculators.py  cli.py  knowledge.py  parser.py  prompts.py  tools.py
src/clinical_ai_tool_agent/corpus/: corpus.md
tests/: test_calculators.py  test_corpus.py  test_parser.py
